Images fixes & search hidden on mobile

--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -15,6 +15,7 @@
   --max-page-width: 1384px;
   --main-padding: 16px;
   --header-height: 64px;
+  --mobile-menu-height: 49px;
   --card-gap: 24px;
   --min-card-width: 240px;
   --cards-in-row: 5;
